--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div id="intro">
             
                 <P>
-                    Lifeflash Clinic is a private health Clinic in Kiryandongo District (Uganda). <br>
+                    Lifeflash Clinic is a private health Clinic in Kiryandongo District (Uganda). <br> <br>
                       It offers quality Services in all cases. 
                       The Clinic's aim is to provide Medicial <br> care Services to people 
                       that will come for the Offer, in order to reduce <br> mortality
